--- a/default.css
+++ b/default.css
@@ -52,52 +52,43 @@ table {
 }
 /* reset css end */
 
-
-a, span, i{
+:root{
+    --pg: #555555;
+    --brand1: #0872b9;
+    --brand2: #5bc5f4;
+    --white: #ffffff;
+    --black: #353535;
+    --footer: #555555;
+}
+a{
     text-decoration: none;
-    display: inline-block;
 }
-
-a:hover{
-    transition: all linear .3s;
-}
-
 ul li{
     list-style-type: none;
 }
-.text-right{
-    text-align: right;
+@font-face {
+    font-family:'OpenSans-Regular';
+    src: url('./fonts/Open_Sans/OpenSans-Regular.ttf');
 }
-.text-center{
-    text-align: center;
+@font-face {
+    font-family:'Oswald-Bold';
+    src: url('./fonts/Oswald/static/Oswald-Bold.ttf');
 }
-.text-left{
-    text-align: left;
+@font-face {
+    font-family:'Oswald-regular';
+    src: url('./fonts/Oswald/static/Oswald-Regular.ttf');
 }
-.d-flex {
-    display: flex;
-    flex-wrap: wrap;
+@font-face {
+    font-family:'myriad-pro-regular';
+    src: url('./fonts/myriad-pro/MYRIADPRO-REGULAR.woff');
 }
-.d-inline-flex {
-    display: inline-flex;
-    flex-wrap: wrap;
+p{
+    font-size: 13px;
+    line-height: 24px;
+    color: var(--pg);
+    font-weight: 400;
+    font-family: "Open Sans";
 }
-.justify-content-end{
-    justify-content: right;
-}
-.justify-content-center{
-    justify-content: center;
-}
-.align-items-end{
-    align-items: flex-end;
-}
-.align-items-center{
-    align-items: center;
-}
-.align-items-start{
-    align-items: flex-start;
-}
-
 .container{
     width: 992px;
     margin: 0 auto;
